PAR-154 : pluginManagement : Add com.jayway.maven.plugins.android.generation2:android-maven-plugin 3.3.2

--- a/pom.xml
+++ b/pom.xml
@@ -95,6 +95,7 @@
     <!-- **************** -->
     <!-- Plugins versions -->
     <!-- **************** -->
+    <version.android.plugin>3.3.2</version.android.plugin>
     <version.antrun.plugin>1.7</version.antrun.plugin>
     <version.archetype.plugin>2.2</version.archetype.plugin>
     <version.assembly.plugin>2.3</version.assembly.plugin>
@@ -212,6 +213,11 @@
     <pluginManagement>
       <!-- All plugins ordered by shortname (antrun, assembly ...) -->
       <plugins>
+        <plugin>
+          <groupId>com.jayway.maven.plugins.android.generation2</groupId>
+          <artifactId>android-maven-plugin</artifactId>
+          <version>${version.android.plugin}</version>
+        </plugin>
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-antrun-plugin</artifactId>
