--- a/pom.xml
+++ b/pom.xml
@@ -120,6 +120,7 @@
     <version.failsafe.plugin>${version.surefire.plugin}</version.failsafe.plugin>
     <version.findbugs.plugin>2.5.2</version.findbugs.plugin>
     <version.gpg.plugin>1.4</version.gpg.plugin>
+    <version.gwt.plugin>2.4.0</version.gwt.plugin>
     <version.idea.plugin>2.2</version.idea.plugin>
     <version.install.plugin>2.4</version.install.plugin>
     <version.invoker.plugin>1.7</version.invoker.plugin>
@@ -371,6 +372,11 @@
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-gpg-plugin</artifactId>
           <version>${version.gpg.plugin}</version>
+        </plugin>
+        <plugin>
+          <groupId>org.codehaus.mojo</groupId>
+          <artifactId>gwt-maven-plugin</artifactId>
+          <version>${version.gwt.plugin}</version>
         </plugin>
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
