PAR-192 : Configure surefire and failsafe plugins to use a tmp dir under the build directory

--- a/pom.xml
+++ b/pom.xml
@@ -363,6 +363,12 @@
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-failsafe-plugin</artifactId>
           <version>${version.failsafe.plugin}</version>
+          <configuration>
+            <systemPropertyVariables>
+              <!-- To avoid conflicts on CI server - PAR-192 -->
+              <java.io.tmpdir>${project.build.directory}</java.io.tmpdir>
+            </systemPropertyVariables>
+          </configuration>
         </plugin>
         <plugin>
           <groupId>org.codehaus.mojo</groupId>
@@ -545,6 +551,12 @@
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-surefire-plugin</artifactId>
           <version>${version.surefire.plugin}</version>
+          <configuration>
+            <systemPropertyVariables>
+              <!-- To avoid conflicts on CI server - PAR-192 -->
+              <java.io.tmpdir>${project.build.directory}</java.io.tmpdir>
+            </systemPropertyVariables>
+          </configuration>
         </plugin>
         <plugin>
           <groupId>org.codehaus.mojo</groupId>
