--- a/pom.xml
+++ b/pom.xml
@@ -191,6 +191,8 @@
     <!-- These properties are automatically computed during the build -->
     <exo.product.scm.revision>N/A</exo.product.scm.revision>
     <parsedVersion.majorVersion>N/A</parsedVersion.majorVersion>
+    <!-- PAR-193 : performances boost workaround -->
+    <version.plexus-utils>3.0.8</version.plexus-utils>
   </properties>
   <prerequisites>
     <maven>${maven.min.version}</maven>
@@ -229,6 +231,14 @@
             <!-- Perfs improvements - PAR-191 -->
             <useJvmChmod>true</useJvmChmod>
           </configuration>
+          <dependencies>
+            <!-- PAR-193 : To be removed when the plugin will have a version of plexus-utils >= 3.0.7 -->
+            <dependency>
+              <groupId>org.codehaus.plexus</groupId>
+              <artifactId>plexus-utils</artifactId>
+              <version>${version.plexus-utils}</version>
+            </dependency>
+          </dependencies>
         </plugin>
         <plugin>
           <groupId>org.codehaus.mojo</groupId>
@@ -273,6 +283,14 @@
             <!-- Perfs improvements - PAR-191 -->
             <useJvmChmod>true</useJvmChmod>
           </configuration>
+          <dependencies>
+            <!-- PAR-193 : To be removed when the plugin will have a version of plexus-utils >= 3.0.7 -->
+            <dependency>
+              <groupId>org.codehaus.plexus</groupId>
+              <artifactId>plexus-utils</artifactId>
+              <version>${version.plexus-utils}</version>
+            </dependency>
+          </dependencies>
         </plugin>
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
@@ -394,11 +412,27 @@
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-install-plugin</artifactId>
           <version>${version.install.plugin}</version>
+          <dependencies>
+            <!-- PAR-193 : To be removed when the plugin will have a version of plexus-utils >= 3.0.7 -->
+            <dependency>
+              <groupId>org.codehaus.plexus</groupId>
+              <artifactId>plexus-utils</artifactId>
+              <version>${version.plexus-utils}</version>
+            </dependency>
+          </dependencies>
         </plugin>
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-invoker-plugin</artifactId>
           <version>${version.invoker.plugin}</version>
+          <dependencies>
+            <!-- PAR-193 : To be removed when the plugin will have a version of plexus-utils >= 3.0.7 -->
+            <dependency>
+              <groupId>org.codehaus.plexus</groupId>
+              <artifactId>plexus-utils</artifactId>
+              <version>${version.plexus-utils}</version>
+            </dependency>
+          </dependencies>
         </plugin>
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
@@ -516,6 +550,14 @@
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-resources-plugin</artifactId>
           <version>${version.resources.plugin}</version>
+          <dependencies>
+            <!-- PAR-193 : To be removed when the plugin will have a version of plexus-utils >= 3.0.7 -->
+            <dependency>
+              <groupId>org.codehaus.plexus</groupId>
+              <artifactId>plexus-utils</artifactId>
+              <version>${version.plexus-utils}</version>
+            </dependency>
+          </dependencies>
         </plugin>
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
@@ -587,6 +629,14 @@
               </manifestEntries>
             </archive>
           </configuration>
+          <dependencies>
+            <!-- PAR-193 : To be removed when the plugin will have a version of plexus-utils >= 3.0.7 -->
+            <dependency>
+              <groupId>org.codehaus.plexus</groupId>
+              <artifactId>plexus-utils</artifactId>
+              <version>${version.plexus-utils}</version>
+            </dependency>
+          </dependencies>
         </plugin>
       </plugins>
     </pluginManagement>
