--- a/pom.xml
+++ b/pom.xml
@@ -145,6 +145,7 @@
     <version.taglist.plugin>2.4</version.taglist.plugin>
     <version.versions.plugin>1.3.1</version.versions.plugin>
     <version.war.plugin>2.3</version.war.plugin>
+    <version.xml.plugin>1.0</version.xml.plugin>
     <!-- *************** -->
     <!-- Others versions -->
     <!-- *************** -->
@@ -672,6 +673,11 @@
             </archive>
           </configuration>
         </plugin>
+        <plugin>
+          <groupId>org.codehaus.mojo</groupId>
+          <artifactId>xml-maven-plugin</artifactId>
+          <version>${version.xml.plugin}</version>
+        </plugin>
       </plugins>
     </pluginManagement>
     <plugins>
@@ -952,6 +958,44 @@
             <artifactId>clirr-maven-plugin</artifactId>
             <configuration>
               <failOnError>false</failOnError>
+            </configuration>
+          </plugin>
+        </plugins>
+      </build>
+    </profile>
+    <!--
+     Checks validity of XML resources files
+     -->
+    <profile>
+      <id>xml-resources-validation</id>
+      <activation>
+        <property>
+          <name>!skip-xml-resources-validation</name>
+        </property>
+      </activation>
+      <build>
+        <plugins>
+          <!-- Validate wellformedness of (almost) all XML files -->
+          <plugin>
+            <groupId>org.codehaus.mojo</groupId>
+            <artifactId>xml-maven-plugin</artifactId>
+            <executions>
+              <execution>
+                <id>Validate eXo configuration files</id>
+                <goals>
+                  <goal>validate</goal>
+                </goals>
+              </execution>
+            </executions>
+            <configuration>
+              <validationSets>
+                <validationSet>
+                  <dir>src/main/resources</dir>
+                  <includes>
+                    <include>**/*.xml</include>
+                  </includes>
+                </validationSet>
+              </validationSets>
             </configuration>
           </plugin>
         </plugins>
