--- a/pom.xml
+++ b/pom.xml
@@ -856,9 +856,15 @@
             <artifactId>maven-javadoc-plugin</artifactId>
             <executions>
               <execution>
-                <id>attach-javadocs</id>
+                <id>attach-javadocs-single</id>
                 <goals>
                   <goal>jar</goal>
+                </goals>
+              </execution>
+              <execution>
+                <id>attach-javadocs-aggregate</id>
+                <goals>
+                  <goal>aggregate-jar</goal>
                 </goals>
               </execution>
             </executions>
@@ -1031,6 +1037,14 @@
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-javadoc-plugin</artifactId>
         <version>${version.javadoc.plugin}</version>
+        <reportSets>
+          <reportSet>
+            <id>aggregate</id>
+            <reports>
+              <report>aggregate</report>
+            </reports>
+          </reportSet>
+        </reportSets>
       </plugin>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
