--- a/pom.xml
+++ b/pom.xml
@@ -106,7 +106,7 @@
     <version.checkstyle.plugin>2.9.1</version.checkstyle.plugin>
     <version.clirr.plugin>2.5</version.clirr.plugin>
     <version.compiler.plugin>2.5.1</version.compiler.plugin>
-    <version.dependency.plugin>2.6-SNAPSHOT</version.dependency.plugin>
+    <version.dependency.plugin>2.5</version.dependency.plugin>
     <version.deploy.plugin>2.7</version.deploy.plugin>
     <version.docck.plugin>1.0</version.docck.plugin>
     <version.eclipse.plugin>2.9</version.eclipse.plugin>
@@ -826,7 +826,7 @@
                       <message>Best practice is to always define plugin versions! Plugins must be released released (no SNAPSHOT) and without using keywords RELEASE or LATEST!</message>
                       <banLatest>true</banLatest>
                       <banRelease>true</banRelease>
-                      <banSnapshots>false</banSnapshots>
+                      <banSnapshots>true</banSnapshots>
                       <phases>deploy,site</phases>
                     </requirePluginVersions>
                   </rules>
@@ -1031,11 +1031,13 @@
         <artifactId>maven-project-info-reports-plugin</artifactId>
         <version>${version.pir.plugin}</version>
       </plugin>
+      <!-- Requires version 2.6 - see MDEP-366
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-dependency-plugin</artifactId>
         <version>${version.dependency.plugin}</version>
       </plugin>
+      -->
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-javadoc-plugin</artifactId>
