PAR-195 : Don't deploy the maven site while releasing. We use only SNAPSHOTs from jenkins for now

--- a/pom.xml
+++ b/pom.xml
@@ -190,6 +190,7 @@
     <!-- maven-pmd-plugin -->
     <targetJdk>${maven.compiler.target}</targetJdk>
     <!-- maven-release-plugin -->
+    <goals>deploy</goals>
     <useReleaseProfile>false</useReleaseProfile>
     <autoVersionSubmodules>true</autoVersionSubmodules>
     <defaulteXoReleaseProfiles>release</defaulteXoReleaseProfiles>
