--- a/pom.xml
+++ b/pom.xml
@@ -840,7 +840,7 @@
                 </configuration>
               </execution>
               <execution>
-                <id>check-java15</id>
+                <id>check-java-compat</id>
                 <goals>
                   <goal>enforce</goal>
                 </goals>
