--- a/pom.xml
+++ b/pom.xml
@@ -176,6 +176,8 @@
     <animal-sniffer.signature.version>1.0</animal-sniffer.signature.version>
     <!-- The version of maven-scm-provider-svnjava to use -->
     <maven-scm-provider-svnjava.version>2.0.5</maven-scm-provider-svnjava.version>
+    <!-- maven-gpg-plugin -->
+    <gpg.useagent>true</gpg.useagent>
     <!-- maven-idea-plugin & maven-eclipse-plugin -->
     <downloadSources>true</downloadSources>
     <!--  maven-javadoc-plugin -->
@@ -423,6 +425,10 @@
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-gpg-plugin</artifactId>
           <version>${version.gpg.plugin}</version>
+          <configuration>
+            <passphrase>${gpg.passphrase}</passphrase>
+            <useAgent>${gpg.useagent}</useAgent>
+          </configuration>
           <dependencies>
             <!-- PAR-193 : To be removed when the plugin will have a version of plexus-utils >= 3.0.7 -->
             <dependency>
@@ -915,10 +921,24 @@
               </execution>
             </executions>
           </plugin>
+          <!-- We want to sign the artifact, the POM, and all attached artifacts -->
+          <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-gpg-plugin</artifactId>
+            <executions>
+              <execution>
+                <id>sign-artifacts</id>
+                <phase>verify</phase>
+                <goals>
+                  <goal>sign</goal>
+                </goals>
+              </execution>
+            </executions>
+          </plugin>
         </plugins>
       </build>
     </profile>
-    <!-- 
+    <!--
     This profile is used to launch integration tests with the failsafe plugin
     http://maven.apache.org/plugins/maven-failsafe-plugin/
      -->
