--- a/pom.xml
+++ b/pom.xml
@@ -190,7 +190,7 @@
     <goals>deploy</goals>
     <useReleaseProfile>false</useReleaseProfile>
     <autoVersionSubmodules>true</autoVersionSubmodules>
-    <defaulteXoReleaseProfiles>release</defaulteXoReleaseProfiles>
+    <defaulteXoReleaseProfiles>exo-release</defaulteXoReleaseProfiles>
     <releaseProfiles>${defaulteXoReleaseProfiles}</releaseProfiles>
     <!-- These properties are automatically computed during the build -->
     <exo.product.scm.revision>N/A</exo.product.scm.revision>
@@ -786,7 +786,7 @@
     </profile>
     <!-- This profile is activated when a project is released. -->
     <profile>
-      <id>release</id>
+      <id>exo-release</id>
       <build>
         <plugins>
           <plugin>
