--- a/pom.xml
+++ b/pom.xml
@@ -193,7 +193,7 @@
     <defaulteXoReleaseProfiles>exo-release</defaulteXoReleaseProfiles>
     <releaseProfiles>${defaulteXoReleaseProfiles}</releaseProfiles>
     <!-- These properties are automatically computed during the build -->
-    <exo.product.scm.revision>N/A</exo.product.scm.revision>
+    <buildNumber>N/A</buildNumber>
     <parsedVersion.majorVersion>N/A</parsedVersion.majorVersion>
   </properties>
   <prerequisites>
@@ -320,7 +320,7 @@
                 <Date>${maven.build.timestamp}</Date>
                 <Implementation-URL>${project.url}</Implementation-URL>
                 <SCM-URL>${project.scm.connection}</SCM-URL>
-                <SCM-Revision>${exo.product.scm.revision}</SCM-Revision>
+                <SCM-Revision>${buildNumber}</SCM-Revision>
                 <Specification-Title>${exo.product.name}</Specification-Title>
                 <Specification-Version>${parsedVersion.majorVersion}.0</Specification-Version>
                 <Specification-Vendor>${project.organization.name}</Specification-Vendor>
@@ -366,7 +366,7 @@
                 <Date>${maven.build.timestamp}</Date>
                 <Implementation-URL>${project.url}</Implementation-URL>
                 <SCM-URL>${project.scm.connection}</SCM-URL>
-                <SCM-Revision>${exo.product.scm.revision}</SCM-Revision>
+                <SCM-Revision>${buildNumber}</SCM-Revision>
                 <Specification-Title>${exo.product.name}</Specification-Title>
                 <Specification-Version>${parsedVersion.majorVersion}.0</Specification-Version>
                 <Specification-Vendor>${project.organization.name}</Specification-Vendor>
@@ -488,7 +488,7 @@
                 <Date>${maven.build.timestamp}</Date>
                 <Implementation-URL>${project.url}</Implementation-URL>
                 <SCM-URL>${project.scm.connection}</SCM-URL>
-                <SCM-Revision>${exo.product.scm.revision}</SCM-Revision>
+                <SCM-Revision>${buildNumber}</SCM-Revision>
                 <Specification-Title>${exo.product.name}</Specification-Title>
                 <Specification-Version>${parsedVersion.majorVersion}.0</Specification-Version>
                 <Specification-Vendor>${project.organization.name}</Specification-Vendor>
@@ -518,7 +518,7 @@
                 <Date>${maven.build.timestamp}</Date>
                 <Implementation-URL>${project.url}</Implementation-URL>
                 <SCM-URL>${project.scm.connection}</SCM-URL>
-                <SCM-Revision>${exo.product.scm.revision}</SCM-Revision>
+                <SCM-Revision>${buildNumber}</SCM-Revision>
                 <Specification-Title>${exo.product.name}</Specification-Title>
                 <Specification-Version>${parsedVersion.majorVersion}.0</Specification-Version>
                 <Specification-Vendor>${project.organization.name}</Specification-Vendor>
@@ -634,7 +634,7 @@
                 <Date>${maven.build.timestamp}</Date>
                 <Implementation-URL>${project.url}</Implementation-URL>
                 <SCM-URL>${project.scm.connection}</SCM-URL>
-                <SCM-Revision>${exo.product.scm.revision}</SCM-Revision>
+                <SCM-Revision>${buildNumber}</SCM-Revision>
                 <Specification-Title>${exo.product.name}</Specification-Title>
                 <Specification-Version>${parsedVersion.majorVersion}.0</Specification-Version>
                 <Specification-Vendor>${project.organization.name}</Specification-Vendor>
@@ -675,7 +675,7 @@
                 <Date>${maven.build.timestamp}</Date>
                 <Implementation-URL>${project.url}</Implementation-URL>
                 <SCM-URL>${project.scm.connection}</SCM-URL>
-                <SCM-Revision>${exo.product.scm.revision}</SCM-Revision>
+                <SCM-Revision>${buildNumber}</SCM-Revision>
                 <Specification-Title>${exo.product.name}</Specification-Title>
                 <Specification-Version>${parsedVersion.majorVersion}.0</Specification-Version>
                 <Specification-Vendor>${project.organization.name}</Specification-Vendor>
@@ -709,6 +709,33 @@
             </goals>
           </execution>
         </executions>
+      </plugin>
+      <plugin>
+        <groupId>org.codehaus.mojo</groupId>
+        <artifactId>buildnumber-maven-plugin</artifactId>
+        <executions>
+          <execution>
+            <goals>
+              <goal>create</goal>
+            </goals>
+            <configuration>
+              <buildNumberPropertyName>buildNumber</buildNumberPropertyName>
+              <revisionOnScmFailure>no_revision</revisionOnScmFailure>
+              <getRevisionOnlyOnce>true</getRevisionOnlyOnce>
+              <timestampFormat>{0, date,yyyyMMdd}</timestampFormat>
+              <providerImplementations>
+                <svn>javasvn</svn>
+              </providerImplementations>
+            </configuration>
+          </execution>
+        </executions>
+        <dependencies>
+          <dependency>
+            <groupId>com.google.code.maven-scm-provider-svnjava</groupId>
+            <artifactId>maven-scm-provider-svnjava</artifactId>
+            <version>${maven-scm-provider-svnjava.version}</version>
+          </dependency>
+        </dependencies>
       </plugin>
     </plugins>
   </build>
@@ -789,34 +816,6 @@
       <id>exo-release</id>
       <build>
         <plugins>
-          <plugin>
-            <groupId>org.codehaus.mojo</groupId>
-            <artifactId>buildnumber-maven-plugin</artifactId>
-            <executions>
-              <execution>
-                <id>generate-scm-revision</id>
-                <phase>prepare-package</phase>
-                <goals>
-                  <goal>create</goal>
-                </goals>
-                <configuration>
-                  <buildNumberPropertyName>exo.product.scm.revision</buildNumberPropertyName>
-                  <revisionOnScmFailure>no_revision</revisionOnScmFailure>
-                  <getRevisionOnlyOnce>true</getRevisionOnlyOnce>
-                  <providerImplementations>
-                    <svn>javasvn</svn>
-                  </providerImplementations>
-                </configuration>
-              </execution>
-            </executions>
-            <dependencies>
-              <dependency>
-                <groupId>com.google.code.maven-scm-provider-svnjava</groupId>
-                <artifactId>maven-scm-provider-svnjava</artifactId>
-                <version>${maven-scm-provider-svnjava.version}</version>
-              </dependency>
-            </dependencies>
-          </plugin>
           <plugin>
             <groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-enforcer-plugin</artifactId>
