--- a/pom.xml
+++ b/pom.xml
@@ -142,6 +142,7 @@
     <version.taglist.plugin>2.4</version.taglist.plugin>
     <version.versions.plugin>1.3.1</version.versions.plugin>
     <version.war.plugin>2.3</version.war.plugin>
+    <version.wikbook.plugin>0.9.41</version.wikbook.plugin>
     <version.xml.plugin>1.0</version.xml.plugin>
     <!-- *************** -->
     <!-- Others versions -->
@@ -692,6 +693,11 @@
             <archiveClasses>true</archiveClasses>
             <attachClasses>true</attachClasses>
           </configuration>
+        </plugin>
+        <plugin>
+          <groupId>org.wikbook</groupId>
+          <artifactId>wikbook.maven</artifactId>
+          <version>${version.wikbook.plugin}</version>
         </plugin>
         <plugin>
           <groupId>org.codehaus.mojo</groupId>
