--- a/pom.xml
+++ b/pom.xml
@@ -135,7 +135,7 @@
     <version.jibx.plugin>1.1.6a</version.jibx.plugin>
     <version.jxr.plugin>2.3</version.jxr.plugin>
     <!-- maven-project-info-reports-plugin -->
-    <version.pir.plugin>2.5.1</version.pir.plugin>
+    <version.project-info-reports.plugin>2.5.1</version.project-info-reports.plugin>
     <version.plexus.plugin>1.3.8</version.plexus.plugin>
     <version.plugin.plugin>3.1</version.plugin.plugin>
     <version.pmd.plugin>2.7.1</version.pmd.plugin>
@@ -1092,7 +1092,7 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-project-info-reports-plugin</artifactId>
-        <version>${version.pir.plugin}</version>
+        <version>${version.project-info-reports.plugin}</version>
       </plugin>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
