PAR-192 : There is an incompatibility with Byteman. We are waiting to see if we can find a fix/workaround

--- a/pom.xml
+++ b/pom.xml
@@ -422,7 +422,8 @@
           <configuration>
             <systemPropertyVariables>
               <!-- To avoid conflicts on CI server - PAR-192 -->
-              <java.io.tmpdir>${project.build.directory}</java.io.tmpdir>
+              <!-- There is an incompatibility with Byteman - used in social -->
+              <!-- <java.io.tmpdir>${project.build.directory}</java.io.tmpdir> -->
             </systemPropertyVariables>
           </configuration>
         </plugin>
@@ -682,7 +683,8 @@
           <configuration>
             <systemPropertyVariables>
               <!-- To avoid conflicts on CI server - PAR-192 -->
-              <java.io.tmpdir>${project.build.directory}</java.io.tmpdir>
+              <!-- There is an incompatibility with Byteman - used in social -->
+              <!-- <java.io.tmpdir>${project.build.directory}</java.io.tmpdir> -->
             </systemPropertyVariables>
           </configuration>
         </plugin>
