PAR-149 : Don't fail the build on error as it may happen because of http://bugs.sun.com/bugdatabase/view_bug.do?bug_id=6709246

--- a/pom.xml
+++ b/pom.xml
@@ -196,6 +196,7 @@
     <detectOfflineLinks>false</detectOfflineLinks>
     <!-- too slow : http://jira.codehaus.org/browse/MJAVADOC-268 -->
     <quiet>true</quiet>
+    <maven.javadoc.failOnError>false</maven.javadoc.failOnError>
     <!-- maven-pmd-plugin -->
     <targetJdk>${maven.compiler.target}</targetJdk>
     <!-- These properties are automatically computed during the build -->
