--- a/pom.xml
+++ b/pom.xml
@@ -136,7 +136,7 @@
     <!--  Upgrading JIBX doesn't work for JCR (at least without modifying the project)-->
     <version.jibx.plugin>1.1.6a</version.jibx.plugin>
     <version.jxr.plugin>2.3</version.jxr.plugin>
-    <version.project-info-reports.plugin>2.6-SNAPSHOT</version.project-info-reports.plugin>
+    <version.project-info-reports.plugin>2.6</version.project-info-reports.plugin>
     <version.plexus.plugin>1.3.8</version.plexus.plugin>
     <version.plugin.plugin>3.1</version.plugin.plugin>
     <version.pmd.plugin>2.7.1</version.pmd.plugin>
