PAR-208 - maven-war-plugin : Activate useCache option by default

--- a/pom.xml
+++ b/pom.xml
@@ -201,6 +201,7 @@
     <!-- These properties are automatically computed during the build -->
     <parsedVersion.majorVersion>N/A</parsedVersion.majorVersion>
     <!-- maven-war-plugin -->
+    <useCache>true</useCache>
     <archiveClasses>true</archiveClasses>
     <maven.war.attachClasses>true</maven.war.attachClasses>
   </properties>
@@ -732,6 +733,7 @@
             <!-- PAR-145 : Be sure that all product package all their classes in JAR (No stand alone classes in WEB-INF/classes) -->
             <archiveClasses>${archiveClasses}</archiveClasses>
             <attachClasses>${maven.war.attachClasses}</attachClasses>
+            <useCache>${useCache}</useCache>
           </configuration>
         </plugin>
         <plugin>
