--- a/pom.xml
+++ b/pom.xml
@@ -135,6 +135,7 @@
     <version.jdocbook.plugin>2.2.1</version.jdocbook.plugin>
     <!--  Upgrading JIBX doesn't work for JCR (at least without modifying the project)-->
     <version.jibx.plugin>1.1.6a</version.jibx.plugin>
+    <version.jmeter.plugin>1.4</version.jmeter.plugin>
     <version.jxr.plugin>2.3</version.jxr.plugin>
     <version.project-info-reports.plugin>2.6</version.project-info-reports.plugin>
     <version.plexus.plugin>1.3.8</version.plexus.plugin>
@@ -568,6 +569,11 @@
           <groupId>org.jibx</groupId>
           <artifactId>maven-jibx-plugin</artifactId>
           <version>${version.jibx.plugin}</version>
+        </plugin>
+        <plugin>
+          <groupId>com.lazerycode.jmeter</groupId>
+          <artifactId>jmeter-maven-plugin</artifactId>
+          <version>${version.jmeter.plugin}</version>
         </plugin>
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
