--- a/pom.xml
+++ b/pom.xml
@@ -102,6 +102,7 @@
     <version.assembly.plugin>2.3</version.assembly.plugin>
     <version.buildhelper.plugin>1.7</version.buildhelper.plugin>
     <version.buildnumber.plugin>1.2</version.buildnumber.plugin>
+    <version.cargo.plugin>1.2.1</version.cargo.plugin>
     <version.clean.plugin>2.5</version.clean.plugin>
     <version.changes.plugin>2.8</version.changes.plugin>
     <version.checkstyle.plugin>2.9.1</version.checkstyle.plugin>
@@ -267,6 +268,11 @@
           <groupId>org.codehaus.mojo</groupId>
           <artifactId>buildnumber-maven-plugin</artifactId>
           <version>${version.buildnumber.plugin}</version>
+        </plugin>
+        <plugin>
+          <groupId>org.codehaus.cargo</groupId>
+          <artifactId>cargo-maven2-plugin</artifactId>
+          <version>${version.cargo.plugin}</version>
         </plugin>
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
