--- a/pom.xml
+++ b/pom.xml
@@ -139,6 +139,7 @@
     <version.jmeter.plugin>1.4</version.jmeter.plugin>
     <version.jodconverter.plugin>2.2.1</version.jodconverter.plugin>
     <version.jxr.plugin>2.3</version.jxr.plugin>
+		<version.lesscss.plugin>1.3.0</version.lesscss.plugin>
     <version.project-info-reports.plugin>2.6</version.project-info-reports.plugin>
     <version.plexus.plugin>1.3.8</version.plexus.plugin>
     <version.plugin.plugin>3.1</version.plugin.plugin>
@@ -592,6 +593,11 @@
           <artifactId>maven-jxr-plugin</artifactId>
           <version>${version.jxr.plugin}</version>
         </plugin>
+				<plugin>
+          <groupId>org.lesscss</groupId>
+          <artifactId>lesscss-maven-plugin</artifactId>
+          <version>${version.lesscss.plugin}</version>
+				</plugin>
         <plugin>
           <groupId>org.codehaus.plexus</groupId>
           <artifactId>plexus-maven-plugin</artifactId>
