--- a/pom.xml
+++ b/pom.xml
@@ -137,8 +137,7 @@
     <version.jaxb2.plugin>1.5</version.jaxb2.plugin>
     <version.jdepend.plugin>2.0-beta-2</version.jdepend.plugin>
     <version.jdocbook.plugin>2.3.8</version.jdocbook.plugin>
-    <!--  Upgrading JIBX doesn't work for JCR (at least without modifying the project)-->
-    <version.jibx.plugin>1.1.6a</version.jibx.plugin>
+    <version.jibx.plugin>1.2.4.5</version.jibx.plugin>
     <version.jmeter.plugin>1.4</version.jmeter.plugin>
     <version.jodconverter.plugin>2.2.1</version.jodconverter.plugin>
     <version.jxr.plugin>2.3</version.jxr.plugin>
