--- a/pom.xml
+++ b/pom.xml
@@ -110,7 +110,7 @@
     <version.changes.plugin>2.8</version.changes.plugin>
     <version.checkstyle.plugin>2.9.1</version.checkstyle.plugin>
     <version.clirr.plugin>2.5</version.clirr.plugin>
-    <version.compiler.plugin>3.0-SNAPSHOT</version.compiler.plugin>
+    <version.compiler.plugin>3.0</version.compiler.plugin>
     <version.copy.plugin>0.2.5</version.copy.plugin>
     <version.dependency.plugin>2.6-SNAPSHOT</version.dependency.plugin>
     <version.deploy.plugin>2.7</version.deploy.plugin>
