--- a/pom.xml
+++ b/pom.xml
@@ -1197,6 +1197,24 @@
         <defaultGoal>com.google.code.sortpom:maven-sortpom-plugin:sort</defaultGoal>
       </build>
     </profile>
+    <!--
+     Controls dependencies
+    -->
+    <profile>
+      <id>verify-deps</id>
+      <build>
+        <defaultGoal>dependency:analyze dependency:analyze-dep-mgt dependency:analyze-duplicate</defaultGoal>
+        <plugins>
+          <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-dependency-plugin</artifactId>
+            <configuration>
+              <outputXML>true</outputXML>
+            </configuration>
+          </plugin>
+        </plugins>
+      </build>
+    </profile>
     <profile>
       <id>maven-site-descriptor</id>
       <activation>
