PAR-212 : * mvn -Pformat-pom = mvn com.google.code.sortpom:maven-sortpom-plugin:sort -Dsort.createBackupFile=false * mvn -Psort-deps -N = mvn com.google.code.sortpom:maven-sortpom-plugin:sort -Dsort.sortDependencies=groupId,artifactId -Dsort.createBackupFile=false  -N

--- a/pom.xml
+++ b/pom.xml
@@ -1210,7 +1210,7 @@
      Sort Dependencies - Maven reads dependencies according to the order in the pom-file when compiling. Rearranging the order may affect the compilation output.
      -->
     <profile>
-      <id>reorder-deps</id>
+      <id>sort-deps</id>
       <build>
         <defaultGoal>sortpom:sort</defaultGoal>
         <plugins>
