PAR-212 : Sort by scope by default. Will be easier to find deps in a module.Take care a lot when changing deps orders in a module as it changes the classpath

--- a/pom.xml
+++ b/pom.xml
@@ -1210,7 +1210,7 @@
             <artifactId>maven-sortpom-plugin</artifactId>
             <configuration>
               <createBackupFile>false</createBackupFile>
-              <sortDependencies>groupId,artifactId</sortDependencies>
+              <sortDependencies>scope,groupId,artifactId</sortDependencies>
             </configuration>
           </plugin>
         </plugins>
