--- a/pom.xml
+++ b/pom.xml
@@ -1217,6 +1217,26 @@
       </build>
     </profile>
     <!--
+     Sort DependencyManagement - Maven reads dependencies according to the order in the pom-file when compiling. Rearranging the order may affect the compilation output.
+     To use only in a POM with depMgt entries
+     -->
+    <profile>
+      <id>sort-depsMgt</id>
+      <build>
+        <defaultGoal>sortpom:sort</defaultGoal>
+        <plugins>
+          <plugin>
+            <groupId>com.google.code.sortpom</groupId>
+            <artifactId>maven-sortpom-plugin</artifactId>
+            <configuration>
+              <createBackupFile>false</createBackupFile>
+              <sortDependencies>groupId,artifactId</sortDependencies>
+            </configuration>
+          </plugin>
+        </plugins>
+      </build>
+    </profile>
+    <!--
      Controls dependencies
     -->
     <profile>
