PAR-219 : pluginManagement : Add org.apache.maven.plugins:maven-remote-resources-plugin:1.4

--- a/pom.xml
+++ b/pom.xml
@@ -148,6 +148,7 @@
     <version.pmd.plugin>2.7.1</version.pmd.plugin>
     <version.rar.plugin>2.3</version.rar.plugin>
     <version.release.plugin>2.3.2</version.release.plugin>
+    <version.remote-resources.plugin.version>1.4</version.remote-resources.plugin.version>
     <version.resources.plugin>2.6</version.resources.plugin>
     <version.selenium.plugin>2.3</version.selenium.plugin>
     <version.site.plugin>3.2</version.site.plugin>
@@ -631,6 +632,11 @@
               <svn>javasvn</svn>
             </providerImplementations>
           </configuration>
+        </plugin>
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-remote-resources-plugin</artifactId>
+          <version>${version.remote-resources.plugin.version}</version>
         </plugin>
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
