PAR-145 : revert the change and let the WAR classes in WEB-INF/classes

--- a/pom.xml
+++ b/pom.xml
@@ -210,8 +210,8 @@
     <parsedVersion.majorVersion>N/A</parsedVersion.majorVersion>
     <!-- maven-war-plugin -->
     <useCache>true</useCache>
-    <archiveClasses>true</archiveClasses>
-    <maven.war.attachClasses>true</maven.war.attachClasses>
+    <archiveClasses>false</archiveClasses>
+    <maven.war.attachClasses>false</maven.war.attachClasses>
   </properties>
   <build>
     <extensions>
