--- a/pom.xml
+++ b/pom.xml
@@ -137,7 +137,8 @@
     <version.javancss.plugin>2.0</version.javancss.plugin>
     <version.jaxb2.plugin>1.5</version.jaxb2.plugin>
     <version.jdepend.plugin>2.0-beta-2</version.jdepend.plugin>
-    <version.jdocbook.plugin>2.3.8</version.jdocbook.plugin>
+    <!-- PAR-222 : jdocbook 2.3.6+ has a perf issue. See MPJDOCBOOK-84 -->
+    <version.jdocbook.plugin>2.3.5</version.jdocbook.plugin>
     <version.jibx.plugin>1.2.4.5</version.jibx.plugin>
     <version.jmeter.plugin>1.7.0</version.jmeter.plugin>
     <version.jodconverter.plugin>2.2.1</version.jodconverter.plugin>
