--- a/pom.xml
+++ b/pom.xml
@@ -472,6 +472,10 @@
           <groupId>org.codehaus.mojo</groupId>
           <artifactId>gwt-maven-plugin</artifactId>
           <version>${version.gwt.plugin}</version>
+          <configuration> 
+            <!-- PAR-218 : Can't disable these unneeded artifacts, so compile them outside of the target WAR -->
+            <deploy>${project.build.directory}/gwt-deploy</deploy>
+          </configuration>
         </plugin>
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
